syntax = "proto3";

package protodb.test;

message User {
  uint64 _id = 1;

  string first_name = 2;
  string last_name = 3;
  uint32 age = 4;
}
